# hw-l13-ue-rd

./: CMakeLists.txt  calculate_health.cpp  calculate_health.h  main.cpp
tests/: test_calculate_health.cpp
